feat: Update OpenAPI documentation
